--- a/design.css
+++ b/design.css
@@ -1,13 +1,20 @@
-/* style.css */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background-image: url(img.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .main {
-  background-color: #3498db;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   color: white;
   text-align: center;
   padding: 20px;
@@ -18,14 +25,21 @@ h1 {
 }
 
 .multiplication-table {
-  background-color: white;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 2em;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 20px;
   text-align: center;
 }
-
+.prompt-container {
+  position: relative;
+  left: 40%;
+}
 h2 {
   font-size: 18px;
 }
@@ -45,8 +59,6 @@ h2 {
   width: 120px;
   text-align: center;
 }
-
-/* Add this CSS to your style.css file or include it within a <style> element in the HTML head section */
 
 /* Style the prompt input */
 input[type="text"] {
