--- a/design.css
+++ b/design.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   overflow: hidden;
 }
-
+/* main */
 .main {
   background: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -23,6 +23,7 @@ h1 {
   font-size: 24px;
 }
 
+/* table design */
 .multiplication-table {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 2em;
